--- a/app/ai/test.ipynb
+++ b/app/ai/test.ipynb
@@ -18,6 +18,24 @@
     "\n",
     "print(tf.__version__)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\new_pose_sync\\app\\ai\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.getcwd())"
+   ]
   }
  ],
  "metadata": {
@@ -36,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
