낙상감지 후 전화걸기 추가

--- a/app/ai/test.ipynb
+++ b/app/ai/test.ipynb
@@ -36,6 +36,24 @@
     "import os\n",
     "print(os.getcwd())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import twilio\n",
+    "print(twilio.__version__)"
+   ]
   }
  ],
  "metadata": {
